[package]
name = "arkworks-msm"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = { version="^0.3.0", default-features = false }
ark-ff = { version="^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", features = ["curve"], optional=true }
ark-std = "0.4.0"

# dev-depenencies not included in 'cargo build' -- used for tests and benchmarks 
[dev-dependencies]

[features]
default=["ark-bn254"]